--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "@tleef/urn-js",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "main": "lib/urn.js",
   "scripts": {
     "build": "babel src --out-dir lib",
     "lint": "standard \"src/**/*.js\"",
     "test": "mocha \"src/**/*.test.js\" --require @babel/register",
-    "test-coverage": "nyc yarn test"
+    "test-coverage": "nyc yarn test",
+    "prepare": "yarn build"
   },
   "repository": "git+https://github.com/tleef/urn-js.git",
   "author": "Tom Lee",
@@ -30,6 +31,6 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.0.0-beta.56",
-    "@tleef/type-js": "^1.3.0"
+    "@tleef/type-js": "^1.3.2"
   }
 }
